# debugger

./: CMakeLists.txt  LICENSE  README.md
cmake/: compiler_flags.cmake
example/: simple.cpp
frontend/: main.cpp
include/nkgt/: debugger.hpp  error_codes.hpp  registers.hpp  util.hpp
src/: debugger.cpp  main.cpp  registers.cpp  util.cpp
tests/: CMakeLists.txt  util_tests.cpp
